time-function changed and issue of scrollbar solved @mentorsAdvice

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -9,6 +9,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  overflow: hidden;
 }
 
 .container .slider {
@@ -18,7 +19,7 @@
   width: 500%;
   height: 100%;
 
-  animation: animate 10s linear infinite;
+  animation: animate 10s ease-in-out infinite;
 }
 
 .container .slider .slide {
